# canvas-app-backend

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CURRENT_ARCHITECTURE.md  GETTING_STARTED.md  NOCODE_PLATFORM_RESEARCH.md  QUICKSTART_AUTH.md  README.md  pyproject.toml  requirements.txt  start.sh  stop.sh  test_auth.sh  test_auth_complete.py
.claude/rules/: api-design.md  code-style.md  database.md  security.md  testing.md
.claude/skills/update-docs/: SKILL.md  changelog-template.md
alembic/: env.py
alembic/versions/: 000f38f3d771_remove_foreign_key_constraints_to_auth_.py  517f0ef4cd0b_fix_datetime_timezone_and_add_.py  52d83d397409_initial_schema.py  57af17d61550_add_users_and_token_blacklist_tables_.py  818919cb752e_add_system_fields_seed_data.py  b901639974d8_add_views_and_permissions_to_objects_.py  e599c4a67d06_add_category_is_system_field_updated_at_.py
app/: config.py  database.py  main.py
app/middleware/: __init__.py  auth.py
app/models/: __init__.py  application.py  field.py  object.py  object_field.py  record.py  relationship.py  relationship_record.py  token_blacklist.py  user.py
app/routers/: __init__.py  applications.py  auth.py  dashboard.py  fields.py  object_fields.py  objects.py  records.py  relationship_records.py  relationships.py
app/schemas/: __init__.py  application.py  auth.py  field.py  object.py  object_field.py  record.py  relationship.py  relationship_record.py
app/services/: __init__.py  application_service.py  auth_service.py  base.py  field_service.py  object_field_service.py  object_service.py  record_service.py  relationship_record_service.py  relationship_service.py
app/utils/: rate_limit.py  security.py
docs/: DEPLOYMENT.md  DEVELOPMENT_WORKFLOW.md  PROJECT_STATUS.md
docs/api/: SPECIFICATION.md
docs/api/02-fields/: 01-create-field.md  02-list-fields.md
docs/api/03-objects/: 01-create-object.md  02-list-objects.md  03-get-object.md  04-update-object.md
docs/api/04-records/: 01-create-record.md  03-get-record.md  04-update-record.md  06-search-records.md
docs/api/05-applications/: 01-create-application.md  02-list-applications.md  03-publish-application.md  04-delete-application.md
docs/api/06-relationships/: 01-create-relationship.md  02-get-object-relationships.md  03-delete-relationship.md
docs/api/07-object-fields/: 03-get-object-field.md  (+4 more)
docs/architecture/: ANALYSIS.md
docs/database/: VISUAL_SCHEMA.md
docs/research/: FRONTEND_REQUIREMENTS.md
scripts/: drop_rls_policies.py
supabase/: config.toml
tasks/: QUICK_START.md  README.md
tasks/completed-tasks/: README.md  TASK-02-database-migration.md  TASK-03-orm-models.md  TASK-04-pydantic-schemas.md  TASK-05-business-services.md  TASK-06-api-routers.md  TASK-07-COMPLETED.md  TASK-07-authentication.md  TASK-08-testing.md
tasks/priority-1-critical/: 01-field-model-schema-update.md  02-object-model-schema-update.md
tasks/priority-2-important/: 05-system-fields-seed-data.md
tests/: conftest.py
tests/test_routers/: test_auth.py  test_fields.py  test_records.py
tests/test_services/: test_field_service.py  test_record_service.py
tests/test_utils/: test_security.py
(+3 files in other folders)
